deployments/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}
  template:
    metadata:
      labels:
        app: ${APP_NAME}
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: ${APP_NAME}
          image: ${REGISTRY}/${APP_NAME}:${VERSION}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          livenessProbe:
            tcpSocket:
              port: traffic
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: "5Mi"
              cpu: "5m"
            limits:
              memory: "10Mi"
          ports:
            - containerPort: 8080
              name: traffic
              protocol: TCP
