deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: traffic
  selector:
    app: ${APP_NAME}
