deployments/kubernetes/network-policy.yaml
# TODO: Add network policy for the application. This defaults to not allowing
# any traffic. The application will start up and work, unless you add some code
# which requires external access, but it won't be able to communicate with
# anything.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ${APP_NAME}
spec:
  podSelector:
    matchLabels:
      app: ${APP_NAME}
  policyTypes:
    - Ingress
    - Egress
